--- a/project.html
+++ b/project.html
@@ -13,19 +13,20 @@
             <ul id="contacts">
                 <li>
                     <a href="https://t.me/s0kcok" target="_blank">
-                        <img src="img/telegram.png" alt="Telegram" />
+                        <img src="/img/telegram.png" alt="Telegram" />
                     </a>
                 </li>
                 <li>
                     <a href="https://vk.com/s0kcok?from=search" target="_blank">
-                        <img src="img/vk.png" alt="VK" />
+                        <img src="/img/vk.png" alt="VK" />
                 </li>
                 <li>
                     <a href="https://discord.com" target="_blank">
-                        <img src="img/discord.png" alt="Discord" />
+                        <img src="/img/discord.png" alt="Discord" />
                     </a>
                 </li>
             </ul>
         </div>
     </body>
 </html>
+
